--- a/webapp/candidatesearch/templates/candidatesearchhome.html
+++ b/webapp/candidatesearch/templates/candidatesearchhome.html
@@ -1,11 +1,44 @@
 <div layout="row" layout-align="center center" md-padding>
-<!-- 	<md-input-container>
+    <!-- 	<md-input-container>
 		<input type="text" name="searchBox" class="md-block">
 	</md-input-container> -->
-
-	<input name='search' type='text' size='50' ng-model="searchtext">
-
-	<md-button class="md-raised" ui-sref="index.candidatessearch.results" ng-click="search()" aria-label="search">search</md-button>
-	{{bairava}}
+    <input name='search' type='text' size='50' ng-model="searchtext">
+    <md-button class="md-raised md-primary" ng-click="search()" aria-label="search">search</md-button>
+    {{bairava}}
 </div>
-<div ui-view="results"></div>
+<!-- <div ui-view="results"></div> -->
+<div ng-repeat="x in results | startFrom: pagination.page * pagination.perPage | limitTo: pagination.perPage" flex layout="row" layout-align="end end">
+    <my-skillcard flex-xs="100" flex-gt-xs="100" candidateid="x.candidateid" flex-xs="100" flex-gt-xs="100">
+        <badges>
+            <verification-badge candidateid="x.candidateid">
+            </verification-badge>
+        </badges>
+        <cardactions>
+            <md-menu>
+                <md-button aria-label="open" class="md-icon-button" ng-click=openMenu($mdOpenMenu,$event)>
+                    <md-icon class="material-icons">more horiz</md-icon>
+                </md-button>
+                <md-menu-content width="4">
+                    <md-menu-item>
+                        <md-button ui-sref="verifyprofile({candidateid:x.candidateid})">
+                            View profile
+                        </md-button>
+                    </md-menu-item>
+                    <md-menu-item>
+                        <md-button>
+                            Show Similar profiles
+                        </md-button>
+                    </md-menu-item>
+                </md-menu-content>
+            </md-menu>
+        </cardactions>
+    </my-skillcard>
+</div>
+<div layout class="md-padding" flex>
+    <div layout layout-align="start start" flex="50">
+        <md-button class="md-raised md-primary" ng-click="pagination.prevPage()" ng-hide="pagination.page == 0">Previous</md-button>
+    </div>
+    <div layout layout-align="end end" flex="50">
+        <md-button class="md-raised md-primary" ng-click="pagination.nextPage()" ng-hide="pagination.page + 1 >= pagination.numPages">Next</md-button>
+    </div>
+</div>
