--- a/webapp/candidatesearch/templates/candidatesearchresults.html
+++ b/webapp/candidatesearch/templates/candidatesearchresults.html
@@ -1,4 +1,4 @@
-<div ng-repeat="x in results" flex layout="row" layout-align="end end">
+<div ng-repeat="x in results | startFrom: pagination.page * pagination.perPage | limitTo: pagination.perPage" flex layout="row" layout-align="end end">
     <my-skillcard flex-xs="100" flex-gt-xs="100" candidateid="x.candidateid" flex-xs="100" flex-gt-xs="100">
         <badges>
             <verification-badge candidateid="x.candidateid">
@@ -24,4 +24,12 @@
             </md-menu>
         </cardactions>
     </my-skillcard>
+</div>
+<div layout>
+    <div layout layout-align="start start">
+        <button ng-click="pagination.prevPage()" ng-hide="pagination.page == 0">Previous</button>
+    </div>
+    <div layout layout-align="end end">
+        <button ng-click="pagination.nextPage()" ng-hide="pagination.page + 1 >= pagination.numPages">Next</button>
+    </div>
 </div>
