--- a/webapp/jobprofile/templates/addskillform.html
+++ b/webapp/jobprofile/templates/addskillform.html
@@ -1,17 +1,28 @@
-<md-dialog>
+<md-dialog flex="50" class="md-padding" layout layout-align="center center">
     <form name="addSkill">
         <md-dialog-content>
             <div layout="column">
-                <md-input-container>
-                    <input ng-model="newSkill.skillName" name="skillName" placeholder="Skill name" required>
+                <md-input-container class="md-block">
+                    <md-icon class="material-icons">playlist_add</md-icon>
+                    <label>Skill Name</label>
+                    <input ng-model="newSkill.skillName" name="skillName" required>
+                    <div ng-messages="addSkill.skillName.$error">
+                        <div ng-message="required">Please enter the skill name.</div>
+                    </div>
                 </md-input-container>
-                <md-input-container>
-                    <input ng-model="newSkill.experience" name="experience" placeholder="Experience on the skill" required>
+                <md-input-container class="md-block">
+                    <md-icon class="material-icons">access_time</md-icon>
+                    <label>Experience on skill (in months)</label>
+                    <input ng-model="newSkill.experience" pattern="[0-9]*" name="experience" required>
+                    <div ng-messages="addSkill.experience.$error">
+                        <div ng-message="required">Please specify the experience for the skill.</div>
+                        <div ng-message="pattern">Please enter a number</div>
+                    </div>
                 </md-input-container>
             </div>
         </md-dialog-content>
         <md-dialog-actions layout="row">
-            <md-button class="md-primary" ng-click='addNew()' ng-disabled="addSkill.$invalid || addSkill.$pristine">Add</md-button>
+            <md-button type="submit" class="md-primary" ng-click='addNew() && addSkill.$valid'>Add</md-button>
             <md-button class="md-primary" ng-click="cancel()">Cancel</md-button>
         </md-dialog-actions>
     </form>
