--- a/webapp/jobsearch/templates/jobsearchresult.html
+++ b/webapp/jobsearch/templates/jobsearchresult.html
@@ -1,4 +1,4 @@
-<div ng-repeat="job in jobs">
+<div ng-repeat="job in jobs" class="md-padding">
     <job-card data='{"jobID":job.jobID,"employerID":job.employer.employerID}'>
         <badges>
             <p>Not verified</p>
@@ -34,4 +34,3 @@
         </cardactions>
     </job-card>
 </div>
- 
