--- a/webapp/candidateregistration/templates/candidateregistration.html
+++ b/webapp/candidateregistration/templates/candidateregistration.html
@@ -15,10 +15,11 @@
 					<md-input-container md-no-float class="md-block">
 						<md-icon class="material-icons"> person</md-icon>
 						<label>Name</label>
-						<input type="text" name="name" required ng-model="user.name">
-
+						<input name="name" required ng-model="user.name" md-maxlength="25" md-minlength="5" md-select-on-focus>
 						<div ng-messages="registrationform.name.$error">
 							<div ng-message="required">Plese tell us  your name </div>
+							<div ng-message="md-maxlength">Your name is too long</div>
+							<div ng-message="md-minlength">Your name is too short</div>
 						</div>
 					</md-input-container>
 				</div>
@@ -36,17 +37,16 @@
 					</md-input-container>
 				</div>
 
-
-
 				<div>
 					<md-input-container md-no-float class="md-block">
 						<md-icon class="material-icons"> email</md-icon>
 
 						<label>Email</label>
-						<input type="text" name="email" ng-model="user.email" required ng-pattern="/^.+@.+\..+$/">
+						<input type="email" name="email" ng-model="user.email" required ng-pattern="/^.+@.+\..+$/">
 						<div ng-messages="registrationform.email.$error">
 							<div  ng-message="required">Please provide a email ID</div>
 							<div  ng-message="pattern">Please provide a valid email ID</div>
+							<div ng-message="email">Please provide a valid email ID</div>
 
 						</div>	
 					</md-input-container>
@@ -63,54 +63,32 @@
 					</md-input-container>
 				</div>
 
+				<div>
+					<md-input-container md-no-float class="md-block">
+						<label>Profession</label>
+						<md-icon class="material-icons">work</md-icon>
+						<!-- <input type="text" name="work" required ng-model="user.profession" required>
+						<div ng-messages="registrationform.work.$error">
+							<div ng-message="required">Please tell us your profession </div>
+						</div> -->
+						<md-select ng-model="profession" value="profession" placeholder="select a profession">
+							<md-select-header>
+								<span>Profession</span>
+							</md-select-header>
+							<md-option ng-value="prof" ng-repeat="prof in profession"></md-option>
+						</md-select>
+					</md-input-container>
+				</div>
+			</md-card-content>
+			<md-card-actions layout="row" layout-align="center center">
+				<md-button type="submit" ng-click="signup()" aria-label="registercandidate" class="md-primary md-raised">
+					Register
+				</md-button>
+			</md-card-actions>
+			<span ng-model="signUpStatus" style="color:blue">{{signUpStatus}}</span>
+			<span ng-model="signUpStatus" style="color:red">{{error}}</span>
 
-				<!-- <div layout="row" layout-xs="column">
-					<div>
-						<md-input-container md-no-float class="md-block">
-							<label>Password</label>
-							<md-icon class="material-icons">lock</md-icon>
-							<input ng-model="user.pwd" type="password" name="password" required md-no-asterisk ng-required="true" minlength="8" maxlength="20" ng-pattern="/^(?=.*[a-zA-Z])(?=.*\d)(?=.*[!@#$%^*()_+])[A-Za-z\d][A-Za-z\d!@#$%^*()_+]{7,19}$/">
-							<div flex layout-align="right" ng-messages="registrationform.password.$error" class="error" role="alert">
-								<div ng-message-exp="['required', 'minlength', 'maxlength', 'pattern']">Password should be 8-20 characters </div>
-							</div>
-						</md-input-container>
-					</div>
+		</form>
 
-					<div>
-						<md-input-container md-no-float class="md-block">
-							<label>Confirm Password</label>
-							<md-icon class="material-icons">lock</md-icon>
-							<input ng-model="user.cpwd" type="password" required md-no-asterisk name="Cfpassword" valid-password-c required>
-							<div flex layout-align="right" ng-messages="registrationform.Cfpassword.$error" class="error" role="alert">
-								<div ng-message-exp="required">This is required </div>
-								<div class="msg-error" ng-show="signupForm.Cfpassword.$error.noMatch">
-									passwords donot match</div>
-								</div>
-							</md-input-container>
-						</div>
-
-					</div> -->
-
-					<div>
-						<md-input-container md-no-float>
-							<label>Profession</label>
-							<md-icon class="material-icons">work</md-icon>
-							<input type="text" name="work" required ng-model="user.profession" required>
-							<div ng-messages="registrationform.work.$error">
-								<div ng-message="required">Please tell us your profession </div>
-							</div>
-						</md-input-container>
-					</div>
-				</md-card-content>
-				<md-card-actions layout="row" layout-align="center center">
-					<md-button type="submit" ng-click="signup()" aria-label="registercandidate" class="md-primary md-raised">
-						Register
-					</md-button>
-				</md-card-actions>
-				<span ng-model="signUpStatus" style="color:blue">{{signUpStatus}}</span>
-				<span ng-model="signUpStatus" style="color:red">{{error}}</span>
-
-			</form>
-			
-		</md-card>
-	</div>
+	</md-card>
+</div>
