--- a/webapp/candidatesearch/templates/candidatesearchresults.html
+++ b/webapp/candidatesearch/templates/candidatesearchresults.html
@@ -1,35 +1,29 @@
-<div ng-repeat="x in results | startFrom: pagination.page * pagination.perPage | limitTo: pagination.perPage" flex layout="row" layout-align="end end">
-    <my-skillcard flex-xs="100" flex-gt-xs="100" candidateid="x.candidateid" flex-xs="100" flex-gt-xs="100">
-        <badges>
-            <verification-badge candidateid="x.candidateid">
-            </verification-badge>
-        </badges>
-        <cardactions>
-            <md-menu>
-                <md-button aria-label="open" class="md-icon-button" ng-click=openMenu($mdOpenMenu,$event)>
-                    <md-icon class="material-icons">more horiz</md-icon>
-                </md-button>
-                <md-menu-content width="4">
-                    <md-menu-item>
-                        <md-button ui-sref="verifyprofile({candidateid:x.candidateid})">
-                            View profile
-                        </md-button>
-                    </md-menu-item>
-                    <md-menu-item>
-                        <md-button>
-                            Show Similar profiles
-                        </md-button>
-                    </md-menu-item>
-                </md-menu-content>
-            </md-menu>
-        </cardactions>
-    </my-skillcard>
-</div>
-<div layout>
-    <div layout layout-align="start start">
-        <button ng-click="pagination.prevPage()" ng-hide="pagination.page == 0">Previous</button>
-    </div>
-    <div layout layout-align="end end">
-        <button ng-click="pagination.nextPage()" ng-hide="pagination.page + 1 >= pagination.numPages">Next</button>
+<div layout-gt-sm="row" layout-sm="column" layout-wrap class="md-padding">
+    <div ng-repeat="x in results"  flex-gt-sm="33" flex-sm="100">
+        <my-skillcard  candidateid="x.candidateid">
+            <badges>
+                <verification-badge candidateid="x.candidateid">
+                </verification-badge>
+            </badges>
+            <cardactions>
+                <md-menu>
+                    <md-button aria-label="open" class="md-icon-button" ng-click=openMenu($mdOpenMenu,$event)>
+                        <md-icon class="material-icons">more horiz</md-icon>
+                    </md-button>
+                    <md-menu-content width="4">
+                        <md-menu-item>
+                            <md-button ui-sref="verifyprofile({candidateid:x.candidateid})">
+                                View profile
+                            </md-button>
+                        </md-menu-item>
+                        <md-menu-item>
+                            <md-button>
+                                Show Similar profiles
+                            </md-button>
+                        </md-menu-item>
+                    </md-menu-content>
+                </md-menu>
+            </cardactions>
+        </my-skillcard>
     </div>
 </div>
